# badlands

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  build.rs  build_config.rs
assets/brains/: hero.wasm
assets/creatures/: creatures.json  factors.json
assets/map/: map_meta.json
assets/materials/: terrain_biomes.json
assets/scenarios/: arena_duel.json  arena_melee_vs_ranged.json
assets/skills/: skills.json
cmake/: FetchDawn.cmake
crates/noiser-bundle/: Cargo.toml
crates/noiser-bundle/src/: lib.rs
docs/: noiser-brain-interop.md  noiser-feedback.md  terrain-cluster-lod.md
docs/brainshitting/: choices.md  enemies.md  events.md  graphical-features.md  heroes.md  levelling.md  map.md
docs/noise_gallery/: .gitignore  index.html
docs/noiser-bugs-upstream/: 2026-07-13-struct-of-enums-return-from-perception-corrupts.md  2026-07-22-entry-point-selection-is-nondeterministic.md  2026-07-22-feature-cpp-embedding-gaps.md  2026-07-22-feature-named-generator-entry-points.md  2026-07-22-feature-structured-generator-parameters.md  2026-07-22-generator-passed-to-function-loses-state.md  2026-07-22-generic-maybe-instantiation-ices-inside-generator-body.md  2026-07-22-generic-protocol-bounds-fail-to-parse.md  2026-07-22-host-fn-vecn-argument-rejected-at-callsite.md  2026-07-22-host-fn-vecn-return-ices-compiler.md  2026-07-22-nested-generator-next-returns-tuple-not-maybe.md  README.md
game/include/: badlands_game.h  badlands_sim.hpp
game/src/: activity_catalog.cpp  activity_histogram.cpp  brain.cpp  brain.h  brain_abi.h  combat.cpp  combat.h  command.cpp  command.h  components.h  creature_catalog.cpp  critter_brain.cpp  critter_brain.h  economy.cpp  economy.h  entity_memory.cpp  entity_memory.h  exploration.cpp  exploration.h  game.cpp  game_state.h  heroes.cpp  heroes.h  monster_brain.cpp  monster_brain.h  movement.cpp  movement.h  nav_world.cpp  nav_world.h  needs.cpp  needs.h  noiser_jit_stubs.cpp  placement.cpp  placement.h  progression.cpp  progression.h  sim.cpp  sim_internal.hpp  skills.cpp  skills.h  (+8 more)
game/tests/: activity_selector_tests.cpp  activity_stats_tests.cpp  archetype_tests.cpp  behaviours_tests.cpp  biome_blend_tests.cpp  brain_abi_tests.cpp  chat_tests.cpp  clock_tests.cpp  combat_tests.cpp  command_tests.cpp  critter_tests.cpp  daylight_tests.cpp  deliberation_tests.cpp  determinism_tests.cpp  duel_common.h  duel_test.cpp  entity_memory_tests.cpp  events_tests.cpp  exploration_tests.cpp  facing_tests.cpp  factors_sanitize_tests.cpp  fog_cascade_tests.cpp  fog_gpu_tests.cpp  fog_sim_gpu_tests.cpp  fog_sim_tests.cpp  forward_pass_tests.cpp  game_ui_tests.cpp  geometry_tests.cpp  hero_brain_parity_tests.cpp  heroes_tests.cpp  hunter_tests.cpp  imgui_input_tests.cpp  movement_tests.cpp  nav_world_tests.cpp  navmesh_tests.cpp  needs_tests.cpp  noiser_smoke_tests.cpp  placement_tests.cpp  progression_tests.cpp  rat_tests.cpp  (+18 more)
scripts/: build_brains.sh
scripts/brains/: combat_test.noiser  hero.noiser  warrior.noiser
scripts/mapgen/: fields.noiser  map_from_image.py  map_from_render.py
shaders/common/: brdf.wesl  color.wesl  colorspace.wesl  fog_cascade.wesl  fog_emitters.wesl  fog_shapes.wesl  fog_types.wesl  frame.wesl  gbuffer_encode.wesl  sh_lighting.wesl  shadow_sampling.wesl  standard_lighting.wesl  ui_composite.wesl  water_noise.wesl  water_waves.wesl
shaders/compute/: fog_fill.wesl  gtao.wesl  mip_generator.wesl  mip_generator_render.wesl
shaders/game/: building.wesl  ground.wesl  overlay.wesl  vision.wesl
shaders/geometry/: thick_line.wesl
shaders/ibl/: brdf_lut_render.wesl  prefilter_render.wesl
shaders/material/: leaf.wesl  normalmapped.wesl  standard_forward.wesl  terrain_blend.wesl  terrain_cluster.wesl  textured_mesh.wesl  water.wesl
shaders/passes/: color_grading.wesl  contact_shadows.wesl  decals.wesl  deferred_lighting.wesl  fog.wesl  fog_composite.wesl  gbuffer_debug.wesl  skybox.wesl  tonemapping.wesl
shaders/tests/: fog_caster.wesl  fog_caster_stripes.wesl  fog_depth_quad.wesl  fog_extract.wesl  fog_fill_test.wesl  forward_debug.wesl  media_slice_extract.wesl
shaders/ui/: ui.wesl
src/: app.rs  assets.rs  game_ffi.rs  main.cpp  main.rs  nav.rs
src/ai_sandbox/: ai_sandbox_view.cpp  ai_sandbox_view.hpp  main_ai_sandbox.cpp
src/core/: geometry_type.hpp  parallel.cpp  parallel.hpp  profiler.cpp  profiler.hpp  roof_shape.hpp
src/crates/assets/: Cargo.toml
src/crates/assets/include/: badlands_assets.h
src/crates/assets/src/: lib.rs
src/crates/brainhost/: Cargo.toml
src/crates/brainhost/include/: brainhost.h
src/crates/brainhost/src/: lib.rs
src/crates/nav/: Cargo.toml
src/crates/nav/include/: badlands_nav.h
src/crates/nav/src/: lib.rs
src/crates/ui/: Cargo.toml
src/crates/ui/include/: badlands_ui.h
src/crates/ui/src/: draw.rs  element.rs  font.rs  layout.rs  lib.rs  tests.rs
src/crates/wesl/: Cargo.toml
src/crates/wesl/include/: badlands_wesl.h  wesl_ffi.h
src/crates/wesl/src/: lib.rs
src/game/: angled_camera.rs  arena.cpp  arena.h  building_catalog.cpp  building_catalog.h  catalog.rs  class_catalog.rs  creature_manifest.cpp  creature_manifest.h  factors_manifest.cpp  factors_manifest.hpp  ground_texture.rs  main_game.cpp  material_id.hpp  material_pack.cpp  material_pack.h  mod.rs  scenario.cpp  scenario.h  skill_manifest.cpp  skill_manifest.hpp  top_down_camera.rs  world.rs
src/gpu/: context.rs  frame.rs  graph.rs  mod.rs  pipelines.rs  reflection.rs
src/mapgen/: authored_map.cpp  authored_map.hpp  authored_map_tests.cpp  biome_assign.cpp  biome_assign.hpp  biomes.hpp  config.cpp  config.hpp  field2d.hpp  fields.cpp  fields.hpp  fog_generator.cpp  fog_generator.hpp  fog_generator_tests.cpp  generator.cpp  generator.hpp  generator_tests.cpp  heightmap.cpp  heightmap.hpp  hillshade.cpp  hillshade.hpp  main_mapgen.cpp  main_patchgen.cpp  mapgen_constants.hpp  mapgen_tests.cpp  outputs.cpp  outputs.hpp  parallel.hpp  patch_eval_tests.cpp  pipeline.cpp  pipeline.hpp  script_eval.cpp  script_eval.hpp  sections.cpp  (+3 more)
tests/: cpp_tests.rs
(+356 files in other folders)
